Thu Nov 19 20:37:10 1998  George Lebl  <jirka@5z.com>

	* gnome-file-entry.[ch]: added default paths and made modality
	  optional, also added a utility function for getting the
	  filename

1998-11-19  Havoc Pennington <hp@pobox.com>

	* gnome-appbar.h, gnome-appbar.c: Add a function to get at the
	GtkProgress.
	* gnome-preferences.c: Change dialog default to "center of
	screen," this emulates KDE and is nicer anyway. Change toolbar
	default to no button relief.

1998-11-19  Jonathan Blandford  <jrb@redhat.com>

	* gnome-popup-help.c (gnome_widget_add_help_with_uidata): we don't 
	actually want to not add help if we have no window, we just don't
	wan't to subscribe to events.

Wen Nov 18 1998  Tim Gerla   <timg@means.net>

        * gnome-uidefs.h: Fixed another bug. :P

Wed Nov 18 17:12:07 1998  Raph Levien  <raph@gimp.org>

	* Makefile.am: added links to libart_lgpl
	* gnome-canvas.c: minimal dependency on libart

Wen Nov 18 04:57 PM 1998  Tim Gerla   <timg@means.net>

        * gnome-uidefs.h: Fixed to really be GnomeUIInfo compatible.

Wen Nov 18 03:26 PM 1998  Tim Gerla   <timg@means.net>

        * gnome-uidefs.h: Added some keybindings.

1998-11-18  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas-rect-ellipse.c (set_stipple): Only do
	gdk_gc_set_stipple if the stipple pixmap is not NULL.  Otherwise,
	just use gdk_gc_set_fill() to set the fill mode to GDK_SOLID.

	* gnome-canvas-line.c (set_stipple): Likewise.

	* gnome-canvas-polygon.c (set_stipple): Likewise.

	* gnome-canvas-text.c (set_stipple): Likewise.

1998-11-18  Tuomas Kuosmanen  <tigert@fun112.koivukyla.hoas.fi>

	* gnome-stock.[c,h], stock_demo.c, pixmaps/stock_index.png
	I updated the index stock-icon, and added stock icons for 
	alignment (left, right, center, justify) - (I thought I added 
	Changelog entries for these already!?) - index is meant for 
	the Help Browser for example, alignment stuff for 
	gnumeric and all editors/wordprocessors/whatever.
