@@ -1,3 +1,10 @@
+Fri Nov 20 00:24:00 1998  Jeff Garzik  <jgarzik@pobox.com>
+
+	* gnome-icon-list.c: fixed doc string after CVS conflict
+	* gnome-about.c: added API docs
+
+	Beginning of libgnomeui doc landing.
+
 Thu Nov 19 20:37:10 1998  George Lebl  <jirka@5z.com>
 
 	* gnome-file-entry.[ch]: added default paths and made modality
